@@ -1,3 +1,4 @@
+	* Fixed bug in URL parser that failed to parse IPv6 addresses
 	* Fixed bug in DHT, related to IPv6 nodes
 	* DHT accepts transaction IDs that have garbage appended to them
 	* DHT logs messages that it fails to decode
